# ssvm-nodejs-starter

./: Cargo.toml  README.md  package.json
node/: app.js  file-server.js
src/: lib.rs
