[package]
name = "ssvm_nodejs_starter"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[package.metadata.ssvmup.profile.release]
wasm-opt = ['-O4']

[lib]
name = "ssvm_nodejs_starter_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
regex = "1.0"
serde_json = "1.0"
lazy_static = "1.0"
rusttype = "=0.9.2"
wasm-bindgen = "=0.2.61"